--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -4,7 +4,7 @@ html.dark {
     --background-color: #292e39;
 
     // Top Bar;
-    --text-color-hover: #333;
+    --text-color-hover: #0071dc;
     --top-bar-btn-bg: #292e39;
     --top-bar-btn-shadow: rgba(0, 0, 0, 0.2);
     --icon-color: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(60deg) brightness(104%)
