--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -1,6 +1,8 @@
 html {
     --text-color: #1a162e;
-    --header-background: #eee;
+    // --header-background: #eee;
+    --header-background: #c69009;
+
     --background-color: #f6f6f6;
 
     // Top Bar
