--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -1,16 +1,13 @@
 html {
     --text-color: #1a162e;
-    // --header-background: #eee;
-    --header-background: #c69009;
-
     --background-color: #f6f6f6;
 
     // Top Bar
     --text-color-hover: #0071dc;
     --top-bar-btn-bg: #fff;
     --top-bar-btn-shadow: rgba(237, 237, 246, 0.2);
-    --icon-color: brightness(0) saturate(100%) invert(8%) sepia(14%) saturate(2822%) hue-rotate(211deg) brightness(96%)
-        contrast(96%);
+    --icon-color: brightness(0) saturate(100%) invert(8%) sepia(14%)
+        saturate(2822%) hue-rotate(211deg) brightness(96%) contrast(96%);
     --top-bar-separate-bg: #ededf6;
 
     // Dropdown
@@ -18,6 +15,6 @@ html {
     --dropdown-box-shadow: rgba(200, 200, 200, 0.4);
     --dropdown-border: 1px solid #d2d1d6;
     --dropdown-active-color: #0071dc;
-    --dropdown-arrow: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(152deg)
-        brightness(103%) contrast(103%);
+    --dropdown-arrow: brightness(0) saturate(100%) invert(100%) sepia(100%)
+        saturate(0%) hue-rotate(152deg) brightness(103%) contrast(103%);
 }
