--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1333,7 +1333,7 @@ button, input, select, textarea {
 
 html {
   --text-color: #1a162e;
-  --header-background: #c69009;
+  --header-background: #eee;
   --background-color: #f6f6f6;
   --text-color-hover: #0071dc;
   --top-bar-btn-bg: #fff;
