--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -18,4 +18,7 @@ html {
     --dropdown-active-color: #0071dc;
     --dropdown-arrow: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(152deg)
         brightness(103%) contrast(103%);
+
+        // Sidebar menu
+        --sbar-bg: #fff;
 }
