--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1248,6 +1248,11 @@ button, input, select, textarea {
   justify-content: space-between;
   padding: 30px 0;
 }
+@media (max-width: 991.98px) {
+  .top-bar {
+    padding: 15px 0;
+  }
+}
 .top-bar__more {
   display: none;
 }
@@ -1259,7 +1264,39 @@ button, input, select, textarea {
 
 @media (max-width: 991.98px) {
   .navbar {
-    display: none;
+    position: fixed;
+    inset: 0 50% 0 0;
+    background: #fff;
+    z-index: 8;
+    translate: -100%;
+    transition: translate 0.3s ease;
+  }
+}
+.navbar__toggle {
+  display: none;
+}
+@media (max-width: 991.98px) {
+  .navbar__toggle {
+    display: block;
+    padding: 20px 40px;
+  }
+}
+.navbar.show {
+  translate: 0;
+}
+.navbar.show ~ .navbar__overlay {
+  visibility: visible;
+  opacity: 1;
+}
+@media (max-width: 991.98px) {
+  .navbar__list {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+@media (max-width: 991.98px) {
+  .navbar__item {
+    width: 100%;
   }
 }
 .navbar__item:hover .dropdown {
@@ -1280,8 +1317,23 @@ button, input, select, textarea {
   padding: 0 15px;
   transition: color 0.3s ease;
 }
+@media (max-width: 991.98px) {
+  .navbar__link {
+    justify-content: space-between;
+    padding: 20px 40px;
+    font-weight: 600;
+  }
+}
 .navbar__link:hover {
   color: var(--text-color-hover);
+}
+.navbar__overlay {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 7;
 }
 
 .navbar-cta {
@@ -1347,6 +1399,7 @@ html {
   --dropdown-active-color: #0071dc;
   --dropdown-arrow: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(152deg)
       brightness(103%) contrast(103%);
+  --sbar-bg: #fff;
 }
 
 html.dark {
