--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -14,10 +14,14 @@
 }
 
 .top-bar {
+    @include abstracts.breakpoint(lg) {
+        padding: 15px 0;
+    }
+
     position: relative;
     @extend %FlexAlignCenter;
     justify-content: space-between;
-    padding: 30px 0;   
+    padding: 30px 0;
 
     &__more {
         display: none;
@@ -32,14 +36,44 @@
 
 .navbar {
     @include abstracts.breakpoint(lg) {
+        position: fixed;
+        inset: 0 50% 0 0;
+        background: #fff;
+        z-index: 8;
+        translate: -100%;
+        transition: translate 0.3s ease;
+    }
+
+    &__toggle {
         display: none;
+        @include abstracts.breakpoint(lg) {
+            display: block;
+            padding: 20px 40px;
+        }
+    }
+
+    &.show {
+        translate: 0;
+    }
+
+    &.show ~ .navbar__overlay {
+        visibility: visible;
+        opacity: 1;
     }
 
     &__list {
         @extend %FlexAlignCenter;
+        @include abstracts.breakpoint(lg) {
+            flex-direction: column;
+            align-items: flex-start;
+        }
     }
 
     &__item {
+        @include abstracts.breakpoint(lg) {
+            width: 100%;
+        }
+
         &:hover .dropdown {
             display: block;
         }
@@ -53,6 +87,12 @@
     }
 
     &__link {
+        @include abstracts.breakpoint(lg) {
+            justify-content: space-between;
+            padding: 20px 40px;
+            font-weight: 600;
+        }
+
         @extend %FlexAlignCenter;
         gap: 6px;
 
@@ -62,10 +102,17 @@
         height: 50px;
         padding: 0 15px;
         transition: color 0.3s ease;
-
         &:hover {
             color: var(--text-color-hover);
         }
+    }
+    &__overlay {
+        visibility: hidden;
+        opacity: 0;
+        position: fixed;
+        inset: 0;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 7;
     }
 }
 
